src/main/antlr/nickle/.antlr/NickleILOCParser.java
// Generated from /home/najem/nickle/v4/src/main/antlr/nickle/NickleILOC.g4 by ANTLR 4.13.1
 package nickle; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NickleILOCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOT_MEMORY=1, DOT_REGISTERS=2, DOT_DATA=3, DOT_CODE=4, DOT_INT=5, DOT_CHAR=6, 
		DOT_STRING=7, NOP=8, ADD=9, SUB=10, MULT=11, DIV=12, ADDI=13, SUBI=14, 
		RSUBI=15, MULTI=16, DIVI=17, RDIVI=18, LSHIFT=19, LSHIFTI=20, RSHIFT=21, 
		RSHIFTI=22, AND=23, ANDI=24, OR=25, ORI=26, XOR=27, XORI=28, LOAD=29, 
		LOADAI=30, LOADAO=31, CLOAD=32, CLOADAI=33, CLOADAO=34, LOADI=35, STORE=36, 
		STOREAI=37, STOREAO=38, CSTORE=39, CSTOREAI=40, CSTOREAO=41, I2I=42, C2C=43, 
		C2I=44, I2C=45, C_I2I=46, C_C2C=47, CMP_LT=48, CMP_LE=49, CMP_EQ=50, CMP_GE=51, 
		CMP_GT=52, CMP_NE=53, CBR=54, JUMPI=55, JUMP=56, P_INT=57, P_CHAR=58, 
		P_STR=59, D_REG=60, D_MEM=61, ATOI=62, HALT=63, R_STATIC=64, R_ARGC=65, 
		R_ARGV=66, ARROW=67, COMMA=68, COLON=69, AT=70, REGISTER_NUM=71, NUMBER=72, 
		ID=73, STRING=74, WS=75, COMMENT=76;
	public static final int
		RULE_program = 0, RULE_directive = 1, RULE_memoryDirective = 2, RULE_registersDirective = 3, 
		RULE_dataSection = 4, RULE_dataDecl = 5, RULE_dataValue = 6, RULE_codeSection = 7, 
		RULE_instruction = 8, RULE_labeledInstruction = 9, RULE_plainInstruction = 10, 
		RULE_nop = 11, RULE_add = 12, RULE_sub = 13, RULE_mult = 14, RULE_div = 15, 
		RULE_addI = 16, RULE_subI = 17, RULE_rsubI = 18, RULE_multI = 19, RULE_divI = 20, 
		RULE_rdivI = 21, RULE_lshift = 22, RULE_lshiftI = 23, RULE_rshift = 24, 
		RULE_rshiftI = 25, RULE_andOp = 26, RULE_andI = 27, RULE_orOp = 28, RULE_orI = 29, 
		RULE_xorOp = 30, RULE_xorI = 31, RULE_load = 32, RULE_loadAI = 33, RULE_loadAO = 34, 
		RULE_cload = 35, RULE_cloadAI = 36, RULE_cloadAO = 37, RULE_loadI = 38, 
		RULE_store = 39, RULE_storeAI = 40, RULE_storeAO = 41, RULE_cstore = 42, 
		RULE_cstoreAI = 43, RULE_cstoreAO = 44, RULE_i2i = 45, RULE_c2c = 46, 
		RULE_c2i = 47, RULE_i2c = 48, RULE_c_i2i = 49, RULE_c_c2c = 50, RULE_cmpLT = 51, 
		RULE_cmpLE = 52, RULE_cmpEQ = 53, RULE_cmpGE = 54, RULE_cmpGT = 55, RULE_cmpNE = 56, 
		RULE_cbr = 57, RULE_jumpI = 58, RULE_jump = 59, RULE_pInt = 60, RULE_pChar = 61, 
		RULE_pStr = 62, RULE_dReg = 63, RULE_dMem = 64, RULE_atoi = 65, RULE_haltInstr = 66, 
		RULE_offset = 67, RULE_atSymbol = 68, RULE_reg = 69, RULE_number = 70, 
		RULE_stringLiteral = 71;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "directive", "memoryDirective", "registersDirective", "dataSection", 
			"dataDecl", "dataValue", "codeSection", "instruction", "labeledInstruction", 
			"plainInstruction", "nop", "add", "sub", "mult", "div", "addI", "subI", 
			"rsubI", "multI", "divI", "rdivI", "lshift", "lshiftI", "rshift", "rshiftI", 
			"andOp", "andI", "orOp", "orI", "xorOp", "xorI", "load", "loadAI", "loadAO", 
			"cload", "cloadAI", "cloadAO", "loadI", "store", "storeAI", "storeAO", 
			"cstore", "cstoreAI", "cstoreAO", "i2i", "c2c", "c2i", "i2c", "c_i2i", 
			"c_c2c", "cmpLT", "cmpLE", "cmpEQ", "cmpGE", "cmpGT", "cmpNE", "cbr", 
			"jumpI", "jump", "pInt", "pChar", "pStr", "dReg", "dMem", "atoi", "haltInstr", 
			"offset", "atSymbol", "reg", "number", "stringLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.memory'", "'.registers'", "'.data'", "'.code'", "'.int'", "'.char'", 
			"'.string'", "'nop'", "'add'", "'sub'", "'mult'", "'div'", "'addI'", 
			"'subI'", "'rsubI'", "'multI'", "'divI'", "'rdivI'", "'lshift'", "'lshiftI'", 
			"'rshift'", "'rshiftI'", "'and'", "'andI'", "'or'", "'orI'", "'xor'", 
			"'xorI'", "'load'", "'loadAI'", "'loadAO'", "'cload'", "'cloadAI'", "'cloadAO'", 
			"'loadI'", "'store'", "'storeAI'", "'storeAO'", "'cstore'", "'cstoreAI'", 
			"'cstoreAO'", "'i2i'", "'c2c'", "'c2i'", "'i2c'", "'c_i2i'", "'c_c2c'", 
			"'cmp_LT'", "'cmp_LE'", "'cmp_EQ'", "'cmp_GE'", "'cmp_GT'", "'cmp_NE'", 
			"'cbr'", "'jumpI'", "'jump'", "'p_int'", "'p_char'", "'p_str'", "'d_reg'", 
			"'d_mem'", "'atoi'", "'halt'", "'r_static'", "'r_argc'", "'r_argv'", 
			"'=>'", "','", "':'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOT_MEMORY", "DOT_REGISTERS", "DOT_DATA", "DOT_CODE", "DOT_INT", 
			"DOT_CHAR", "DOT_STRING", "NOP", "ADD", "SUB", "MULT", "DIV", "ADDI", 
			"SUBI", "RSUBI", "MULTI", "DIVI", "RDIVI", "LSHIFT", "LSHIFTI", "RSHIFT", 
			"RSHIFTI", "AND", "ANDI", "OR", "ORI", "XOR", "XORI", "LOAD", "LOADAI", 
			"LOADAO", "CLOAD", "CLOADAI", "CLOADAO", "LOADI", "STORE", "STOREAI", 
			"STOREAO", "CSTORE", "CSTOREAI", "CSTOREAO", "I2I", "C2C", "C2I", "I2C", 
			"C_I2I", "C_C2C", "CMP_LT", "CMP_LE", "CMP_EQ", "CMP_GE", "CMP_GT", "CMP_NE", 
			"CBR", "JUMPI", "JUMP", "P_INT", "P_CHAR", "P_STR", "D_REG", "D_MEM", 
			"ATOI", "HALT", "R_STATIC", "R_ARGC", "R_ARGV", "ARROW", "COMMA", "COLON", 
			"AT", "REGISTER_NUM", "NUMBER", "ID", "STRING", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NickleILOC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NickleILOCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public CodeSectionContext codeSection() {
			return getRuleContext(CodeSectionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(NickleILOCParser.EOF, 0); }
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public DataSectionContext dataSection() {
			return getRuleContext(DataSectionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT_MEMORY || _la==DOT_REGISTERS) {
				{
				{
				setState(144);
				directive();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT_DATA) {
				{
				setState(150);
				dataSection();
				}
			}

			setState(153);
			codeSection();
			setState(154);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveContext extends ParserRuleContext {
		public MemoryDirectiveContext memoryDirective() {
			return getRuleContext(MemoryDirectiveContext.class,0);
		}
		public RegistersDirectiveContext registersDirective() {
			return getRuleContext(RegistersDirectiveContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitDirective(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_directive);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT_MEMORY:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				memoryDirective();
				}
				break;
			case DOT_REGISTERS:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				registersDirective();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MemoryDirectiveContext extends ParserRuleContext {
		public TerminalNode DOT_MEMORY() { return getToken(NickleILOCParser.DOT_MEMORY, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public MemoryDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_memoryDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterMemoryDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitMemoryDirective(this);
		}
	}

	public final MemoryDirectiveContext memoryDirective() throws RecognitionException {
		MemoryDirectiveContext _localctx = new MemoryDirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_memoryDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(DOT_MEMORY);
			setState(161);
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegistersDirectiveContext extends ParserRuleContext {
		public TerminalNode DOT_REGISTERS() { return getToken(NickleILOCParser.DOT_REGISTERS, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public RegistersDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_registersDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterRegistersDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitRegistersDirective(this);
		}
	}

	public final RegistersDirectiveContext registersDirective() throws RecognitionException {
		RegistersDirectiveContext _localctx = new RegistersDirectiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_registersDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(DOT_REGISTERS);
			setState(164);
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataSectionContext extends ParserRuleContext {
		public TerminalNode DOT_DATA() { return getToken(NickleILOCParser.DOT_DATA, 0); }
		public List<DataDeclContext> dataDecl() {
			return getRuleContexts(DataDeclContext.class);
		}
		public DataDeclContext dataDecl(int i) {
			return getRuleContext(DataDeclContext.class,i);
		}
		public DataSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterDataSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitDataSection(this);
		}
	}

	public final DataSectionContext dataSection() throws RecognitionException {
		DataSectionContext _localctx = new DataSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dataSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(DOT_DATA);
			setState(168); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(167);
				dataDecl();
				}
				}
				setState(170); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(NickleILOCParser.ID, 0); }
		public TerminalNode COLON() { return getToken(NickleILOCParser.COLON, 0); }
		public DataValueContext dataValue() {
			return getRuleContext(DataValueContext.class,0);
		}
		public DataDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterDataDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitDataDecl(this);
		}
	}

	public final DataDeclContext dataDecl() throws RecognitionException {
		DataDeclContext _localctx = new DataDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dataDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(ID);
			setState(173);
			match(COLON);
			setState(174);
			dataValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataValueContext extends ParserRuleContext {
		public TerminalNode DOT_INT() { return getToken(NickleILOCParser.DOT_INT, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode DOT_CHAR() { return getToken(NickleILOCParser.DOT_CHAR, 0); }
		public TerminalNode DOT_STRING() { return getToken(NickleILOCParser.DOT_STRING, 0); }
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public DataValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterDataValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitDataValue(this);
		}
	}

	public final DataValueContext dataValue() throws RecognitionException {
		DataValueContext _localctx = new DataValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dataValue);
		try {
			setState(182);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT_INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(176);
				match(DOT_INT);
				setState(177);
				number();
				}
				break;
			case DOT_CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				match(DOT_CHAR);
				setState(179);
				number();
				}
				break;
			case DOT_STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(180);
				match(DOT_STRING);
				setState(181);
				stringLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeSectionContext extends ParserRuleContext {
		public TerminalNode DOT_CODE() { return getToken(NickleILOCParser.DOT_CODE, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public CodeSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterCodeSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitCodeSection(this);
		}
	}

	public final CodeSectionContext codeSection() throws RecognitionException {
		CodeSectionContext _localctx = new CodeSectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_codeSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(DOT_CODE);
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -256L) != 0) || _la==ID) {
				{
				{
				setState(185);
				instruction();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public LabeledInstructionContext labeledInstruction() {
			return getRuleContext(LabeledInstructionContext.class,0);
		}
		public PlainInstructionContext plainInstruction() {
			return getRuleContext(PlainInstructionContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_instruction);
		try {
			setState(193);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				labeledInstruction();
				}
				break;
			case NOP:
			case ADD:
			case SUB:
			case MULT:
			case DIV:
			case ADDI:
			case SUBI:
			case RSUBI:
			case MULTI:
			case DIVI:
			case RDIVI:
			case LSHIFT:
			case LSHIFTI:
			case RSHIFT:
			case RSHIFTI:
			case AND:
			case ANDI:
			case OR:
			case ORI:
			case XOR:
			case XORI:
			case LOAD:
			case LOADAI:
			case LOADAO:
			case CLOAD:
			case CLOADAI:
			case CLOADAO:
			case LOADI:
			case STORE:
			case STOREAI:
			case STOREAO:
			case CSTORE:
			case CSTOREAI:
			case CSTOREAO:
			case I2I:
			case C2C:
			case C2I:
			case I2C:
			case C_I2I:
			case C_C2C:
			case CMP_LT:
			case CMP_LE:
			case CMP_EQ:
			case CMP_GE:
			case CMP_GT:
			case CMP_NE:
			case CBR:
			case JUMPI:
			case JUMP:
			case P_INT:
			case P_CHAR:
			case P_STR:
			case D_REG:
			case D_MEM:
			case ATOI:
			case HALT:
				enterOuterAlt(_localctx, 2);
				{
				setState(192);
				plainInstruction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabeledInstructionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(NickleILOCParser.ID, 0); }
		public TerminalNode COLON() { return getToken(NickleILOCParser.COLON, 0); }
		public PlainInstructionContext plainInstruction() {
			return getRuleContext(PlainInstructionContext.class,0);
		}
		public LabeledInstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labeledInstruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).enterLabeledInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NickleILOCListener ) ((NickleILOCListener)listener).exitLabeledInstruction(this);
		}
	}
